--- a/web/git-reminder/package.json
+++ b/web/git-reminder/package.json
@@ -10,10 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "firebase": "^8.3.1",
+    "firebaseui": "^4.8.0",
+    "install": "^0.13.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-responsive": "^8.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
+    "ui": "^0.2.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -39,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-responsive": "^8.0.2",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
