--- a/.gitignore
+++ b/.gitignore
@@ -20,23 +20,23 @@ target
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-web/git-reminder/node_modules
-web/git-reminder/.pnp
-web/git-reminder/.pnp.js
+/node_modules
+/.pnp
+/.pnp.js
 
 # testing
-web/git-reminder/coverage
+/coverage
 
 # production
-web/git-reminder/build
+/build
 
 # misc
-web/git-reminder/.DS_Store
-web/git-reminder/.env.local
-web/git-reminder/.env.development.local
-web/git-reminder/.env.test.local
-web/git-reminder/.env.production.local
+/.DS_Store
+/.env.local
+/.env.development.local
+/.env.test.local
+/.env.production.local
 
-web/git-reminder/npm-debug.log*
-web/git-reminder/yarn-debug.log*
-web/git-reminder/yarn-error.log*
+/npm-debug.log*
+/yarn-debug.log*
+/yarn-error.log*
